<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/card_4">
<!-- I've Named String names as name_option,ids as nameoption-->

    <!--ACCOUNTS-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounts_option"
        android:id="@+id/accountsoption"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#ffffff"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/accountsoption"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        />
    <!--NOTIFICATIONS-->
    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_option"
        android:id="@+id/notificationsoption"
        android:layout_below="@+id/accountsoption"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#ffffffff"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/notificationsoption"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        />

    <!--HElp-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_option"
        android:id="@+id/helpoption"
        android:layout_below="@+id/notificationsoption"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#ffffffff"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/helpoption"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        />

    <!--FEEDBACK-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_option"
        android:id="@+id/feedbackoption"
        android:layout_below="@+id/helpoption"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:clickable="true"
        android:onClick="sendfeedback"
        android:textColor="#ffffffff" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/feedbackoption"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        />
    <!--About Button-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_option"
        android:id="@+id/aboutoption"
        android:layout_below="@id/feedbackoption"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:clickable="true"
        android:onClick="openaboutpage"
        android:textColor="#ffffffff" />
</RelativeLayout>
